# CDACDiscordBot

./: .gitignore  INSTRUCTIONS.txt  README.md  pyproject.toml
discordbot/: __main__.py  bot.py  cmd.py  emojis.py  util.py
utils/get-emojis/: emojis_to.py  get-emojis.sh
