[project]
name = "discordbot"
version = "0.0.1"
description = "Final discord bot with features implemented for RICSS and CDAC's VIA project."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "RenoirTan"}
]
dependencies = [
    "discord.py >= 2.1.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"